apps/prod/mow/www.einsteinersllc.com/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-redirect-ingress
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.einsteinersllc.com"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: einsteinersllc.com
  tls:
  - hosts:
    - einsteinersllc.com
    secretName: https-secret-redirect
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.einsteinersllc.com
    secretName: https-secret
  rules:
  - host: www.einsteinersllc.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
